Refactor document and folder creation to handle name conflicts and update schema examples and fix tests